# desk-mcp

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
src/desk_mcp/: __init__.py  cli.py  server.py
